# gradegetter

./: .gitignore  Cargo.toml  Dockerfile.backend  Dockerfile.gradegetter  README.md  index.html  run.sh
.cargo/: config.toml
.sqlx/: query-06cf133bcd96c778598426094fa56a33d08b66c45b2e8a489ca6a0dfc5924c32.json  query-26aa58f57faa3144eb9f15218fadccc5f0f76c323e5fb75dbc3b7a70e010ca70.json  query-34083864b0764808d03cb01398e83c9789422cbe5af163a904ba428f65fbdf1c.json  query-4f969a117a94fbeca480b0a9dd55a80158cf037f597dcb908a96b93235c04648.json  query-5a1953c3f12adb9cd2c05e7090d9cd5a45b2df40e4d07cd8323679ba90085e18.json  query-5df5df15a6857c5f5f947a7c0e35b627fbc36264c059594a7501276584861b49.json  query-62690b5163cceb6128edc20240c8dd9f57064b3a05d58bd17b1749784643cf34.json  query-a8e5729f2053598f6a8cedf82e51198f1491f0b12e81c86d72318ef45990a76e.json  query-b2c5700480348cdc7eac8c878cb95153dfa5a91c4e4b368fc4d70f692b616cf7.json  query-e0a98ca58b73ab57aa6dbd7726845740cd01dace997da5d214d44e5382421875.json  query-f97f5555a7dd51b77ed95c1ccfec00932987b4edb9f21e6b0efb83da7277e266.json
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/release/: output-metadata.json
android/app/release/baselineProfiles/0/: app-release.dm
android/app/release/baselineProfiles/1/: app-release.dm
android/app/src/androidTest/java/net/devinlittle/gradegetter/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/net/devinlittle/gradegetter/: MainActivity.java  MyWidgetProvider.java  UpdateService.java
android/app/src/main/java/net/devinlittle/gradegetter/ui/gallery/: GalleryFragment.java  GalleryViewModel.java
android/app/src/main/java/net/devinlittle/gradegetter/ui/home/: HomeFragment.java  HomeViewModel.java
android/app/src/main/java/net/devinlittle/gradegetter/ui/slideshow/: SlideshowFragment.java  SlideshowViewModel.java
android/app/src/main/res/layout/: app_bar_main.xml  widget_layout.xml
android/app/src/main/res/navigation/: mobile_navigation.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/main/res/xml/: network_security_config.xml  widget_info.xml
android/app/src/test/java/net/devinlittle/gradegetter/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
backend/: .gitignore  Cargo.toml  README.md  env.template
backend/migrations/: 20241201164919_service-auth.sql  20250910164919_schoology-auth.sql  20250910174919_grades.sql
backend/res/init/openrc/: backend
backend/res/init/runit/: run
backend/res/init/systemd/: backend.service
backend/src/: main.rs
backend/src/middleware/: jwt.rs
backend/src/routes/: auth.rs  grades.rs  mod.rs
backend/src/util/: hash.rs
chart/: .helmignore  Chart.yaml  values.yaml
chart/templates/: NOTES.txt  deployment-backend.yaml  deployment-gradegetter.yaml  ingress.yaml  service-gradegetter.yaml
crypto_utils/: .gitignore  Cargo.toml
crypto_utils/src/: lib.rs
gradegetter/: .env  .gitignore  Cargo.toml  README.md  env.template
gradegetter-desktop/: package.json  pnpm-lock.yaml  svelte.config.js
gradegetter-desktop/src/: app.html
gradegetter-desktop/src-tauri/: Cargo.toml  tauri.conf.json
gradegetter-desktop/src-tauri/capabilities/: default.json
gradegetter-desktop/src-tauri/src/: lib.rs  main.rs
gradegetter-desktop/src/routes/: +page.svelte
gradegetter-desktop/src/routes/login/: +page.svelte
gradegetter-desktop/src/routes/register/: +page.svelte
gradegetter/src/: main.rs
src/: main.rs
tmp/: docker-compose.yaml
tokengetter/: .gitignore  config.json.template  index.js  package.json  pnpm-lock.yaml
