[package]
name = "gradegetter"
version = "1.0.0"
edition = "2024"

[dependencies]
reqwest = "0.12"
tokio = {version = "1", features = ["full"]}
regex = "1"
serde = {version = "1", features=["derive"]}
serde_json = "1"
scraper = "0.24"
axum = "0.8.4"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
